@@ -1,3 +1,5 @@
+  - Show today and a week bestfit count
+
 v0.3.5    Fri Jun 26 12:20:28 2015 KST
   - 의류준비에서 수선으로 변경했을때 치수측정으로 상태가 바뀌는 버그 수정
 
